--- a/client/src/styling/Navbar.css
+++ b/client/src/styling/Navbar.css
@@ -20,13 +20,17 @@
 
 
 /* LOGO */
-.left-side-nav {
+.left-side-nav{
     font-size: 40px;
     float: left;
     display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
     padding-left: 25px;
 }
-
+.logo{
+    height: 90px;
+}
 
 /* THE LINKS */
 .nav-bar-list{
@@ -47,11 +51,12 @@
     opacity: 0.6;
 }
 
-
 .underline{
     border-bottom: 3px solid #ffffff;
     box-shadow: 0px 15px 12px -10px rgba(88,200,252,255);
 }
+
+
 
 .mobile {
     color: #ffffff;
@@ -64,7 +69,9 @@
 }
 
 
-@media screen and (max-width: 1115px){
+
+/* REACTIVENESS */
+@media screen and (max-width: 1215px){
     .nav-bar.active{
         list-style-type: none;
         display: flex;
@@ -105,14 +112,17 @@
     .nav-bar-link{
         font-size: 15px;
     }
+    .left-side-nav{
+        font-size: 25px;
+    }
+    .logo{
+        height: 75px;
+    }
 }
 
 @media screen and (max-width: 700px){
     .nav-bar.active{
         width: 25%;
         margin-left: 75%;
-    }
-    .left-side-nav{
-        font-size: 25px;
     }
 }
