Home page mostly functional. Missing forms and patch.

--- a/client/src/styling/App.css
+++ b/client/src/styling/App.css
@@ -1,4 +1,10 @@
 body{
     margin: 0;
     font-family: 'Bree Serif', serif;
+    color: #204c73;
+}
+
+.App{
+    display: flex;
+    justify-content: center;
 }
