--- a/client/src/styling/Home.css
+++ b/client/src/styling/Home.css
@@ -23,6 +23,12 @@
     width: 90%;
     height: 40px;
 }
+.final-search{
+    display: flex;
+    width: 90%;
+    height: 40px;
+    margin-bottom: 50px;
+}
 .search-select{
     font-family: inherit;
     font-size: 15px;
