--- a/client/src/styling/Home.css
+++ b/client/src/styling/Home.css
@@ -7,7 +7,8 @@
 }
 .test{
     width: 90%;
-    margin-top: 125px;
+    margin-top: 225px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +65,7 @@
     border: 1px solid #204c73;
     border-radius: 0px 10px 10px 0px;
 }
-::placeholder{
+.search-input::placeholder{
     color: #58c8fc;
 }
 
@@ -93,6 +94,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.form-box{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 3px solid #204c73;
+    padding: 15px 0px;
+    box-shadow: 0px 0px 20px 2px rgba(88, 200, 252, 0.5);
+}
+.form-heading{
+    color: #204c73;
+    font-size: 20px;
 }
 
 /* THE CARDS */
@@ -203,4 +217,7 @@ textarea{
 }
 .save:hover{
     opacity: 0.6;
+}
+.save:active{
+    transform: translate(-1px, 2px);
 }
