--- a/client/src/styling/Home.css
+++ b/client/src/styling/Home.css
@@ -38,11 +38,19 @@
     width: 50%;
     height: 40px;
 }
+.final-heading{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 50px;
+}
 .final-search{
     display: flex;
-    width: 90%;
+    width: 50%;
     height: 40px;
-    margin-bottom: 50px;
 }
 .search-select{
     font-family: inherit;
