--- a/client/src/styling/Home.css
+++ b/client/src/styling/Home.css
@@ -183,6 +183,15 @@
 .edit-button:hover{
     opacity: 0.6;
 }
+.copy-button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 18px;
+}
+.copy-button:hover{
+    opacity: 0.6;
+}
 
 /* EDIT MODE / FORM */
 .edit-mode{
