--- a/client/src/styling/Home.css
+++ b/client/src/styling/Home.css
@@ -1,3 +1,15 @@
+.trivia-body{
+    background-color: #ffffff;
+    border-bottom: 4px solid #31719c;
+    border-left: 4px solid #31719c;
+    border-right: 4px solid #31719c;
+}
+.body-box{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
 .trivia-list{
     width: 90%;
     margin-top: 125px;
@@ -22,16 +34,23 @@
 .big-logo{
     height: 200px;
     margin: 30px 0px;
+    /* border: 2px solid #31719c; */
+    border-radius: 100px;
+    box-shadow: 0px 15px 15px -5px rgba(56, 128, 173, 0.5);
 }
 
 /* SEARCH BAR */
 .trivia-heading{
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     align-content: center;
+    background-color: #ffffff;
+    padding-top: 40px;
+    border-top: 4px solid #31719c;
+    border-left: 4px solid #31719c;
+    border-right: 4px solid #31719c;
 }
 .trivia-search{
     display: flex;
@@ -39,13 +58,16 @@
     height: 40px;
 }
 .final-heading{
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     align-content: center;
-    margin-bottom: 50px;
+    background-color: #ffffff;
+    padding: 40px 0px;
+    border-top: 4px solid #31719c;
+    border-left: 4px solid #31719c;
+    border-right: 4px solid #31719c;
 }
 .final-search{
     display: flex;
@@ -55,36 +77,39 @@
 .search-select{
     font-family: inherit;
     font-size: 15px;
-    background-color: #58c8fc;
+    background-color: #50b7e9;
+    /* background-image: linear-gradient(rgb(88, 200, 252), rgb(71, 163, 211), rgb(56, 128, 173)); */
     color: #ffff;
     padding-left: 10px;
     outline: none;
-    border: 1px solid #204c73;
+    border: 2px solid #31719c;
     border-radius: 10px 0px 0px 10px;
+    cursor: pointer;
 }
 .search-input{
     font-size: 15px;
     font-family: inherit;
     width: 100%;
     padding-left: 10px;
-    /* color: #4599c5; */
-    color: #58c8fc;
+    color: #31719c;
     outline: none;
-    border: 1px solid #204c73;
+    border-top: 2px solid #31719c;
+    border-right: 2px solid #31719c;
+    border-bottom: 2px solid #31719c;
     border-radius: 0px 10px 10px 0px;
 }
 .search-input::placeholder{
-    color: #58c8fc;
+    color: #31719c;
 }
 
 /* ADD BUTTONS */
 .add-questions{
     font-family: inherit;
     font-size: 15px;
-    background-color: #58c8fc;
+    background-color: #50b7e9;
     color: #ffff;
     padding-left: 10px;
-    border: 1px solid #204c73;
+    border: 2px solid #31719c;
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
@@ -109,7 +134,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 4px solid #204c73;
+    border-bottom: 4px solid #31719c;
+    padding-bottom: 40px;
     margin-bottom: 30px;
 }
 .random-question{
@@ -118,9 +144,9 @@
 .get-random-question{
     font-family: inherit;
     font-size: 18px;
-    background-color: #58c8fc;
+    background-color: #50b7e9;
     color: #ffff;
-    border: 1px solid #204c73;
+    border: 2px solid #31719c;
     border-radius: 10px;
     padding: 8px 10px;
     cursor: pointer;
@@ -144,20 +170,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 3px solid #204c73;
+    border: 3px solid #31719c;
+    background-color: #ffffff;
     padding: 15px 0px;
-    box-shadow: 0px 0px 20px 2px rgba(88, 200, 252, 0.5);
+    box-shadow: 0px 0px 20px 2px rgba(56, 128, 173, 0.5);
 }
 .form-heading{
-    color: #204c73;
+    color: #31719c;
     font-size: 20px;
 }
 
 /* THE CARDS */
 .letter-heading{
     font-size: 50px;
-    width: 100%;
-    border-bottom: 4px solid #204c73;
+    width: 95%;
+    border-bottom: 4px solid #31719c;
     margin: 30px 0px;
 }
 .trivia-card-container{
@@ -168,7 +195,7 @@
 }
 .trivia-card{
     width: 90%;
-    border: 2px solid #204c73;
+    border: 2px solid #31719c;
     border-radius: 2px;
     margin: 20px 0px;
     padding: 10px 20px;
@@ -255,21 +282,22 @@ label{
 input{
     width: 100%;
     outline: none;
-    border: 1px solid #204c73;
+    border: 1px solid #31719c;
     font-family: inherit;
-    color: #204c73;
+    color: #31719c;
     border-radius: 5px;
 }
 textarea{
     width: 100%;
     outline: none;
-    border: 1px solid #204c73;
+    border: 1px solid #31719c;
     font-family: inherit;
-    color: #204c73;
+    color: #31719c;
     border-radius: 5px;
 }
 .save{
-    background-color: #204c73;
+    font-family: inherit;
+    background-color: #31719c;
     color: #ffffff;
     border: none;
     border-radius: 5px;
