--- a/client/src/styling/Navbar.css
+++ b/client/src/styling/Navbar.css
@@ -9,7 +9,7 @@
     height: 100px;
     padding-bottom: 10px;
     padding-top: 10px;
-    background-image: linear-gradient(rgb(88, 200, 252), rgb(32, 76, 115));
+    background-image: linear-gradient(rgb(88, 200, 252, 0.75), rgb(32, 76, 115, 0.75));
     color: #ffffff;
 }
 .nav-bar{
